<resources>
    <string name="app_name">Transflo</string>
    <string name="title_activity_maps">Map</string>
    <string name="track_me">Track me</string>
    <string name="tracking">Tracking...</string>
    <string name="satellite">Satellite</string>
    <string name="map">Map</string>
    <string name="current">Current</string>
    <string name="database">Database</string>
    <string name="server">Server</string>
    <string name="search">Search</string>

    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>

    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="network_turn_on">Please turn on your network</string>
</resources>
